--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "env-cmd": "^10.1.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-data-table-component": "^6.11.6",
     "react-dom": "^17.0.1",
+    "react-google-charts": "^3.0.15",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^3.1.1",
+    "react-spinners": "^0.9.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
